@@ -1,3 +1,7 @@
+2008-04-22  Satoshi Konno <skonno@cybergarage.org>
+	* Added cg_upnp_controlpoint_getdevice() to get a device by the index.
+	* Added cg_upnp_devicelist_get() to get a device by the index.
+
 2008-03-17  Satoshi Konno <skonno@cybergarage.org>
 	* Changed not to define BOOL type using XCode.
 	* Added to check IP_PKTINFO into configure.in.
